[package]
name = "skog"
version = "0.1.0"
authors = ["Roger Andersen <hexjelly@hexjelly.com>"]

[dependencies]
warp = "0.1.8"
pretty_env_logger = "0.2.4"
serde = "1.0.80"
serde_derive = "1.0.80"
log = "0.4.6"
r2d2 = "0.8.2"
r2d2_sqlite = "0.7.0"
serde_json = "1.0.32"

[dependencies.rusqlite]
version = "0.15.0"
features = ["bundled"]

[lib]
name = "skog"
path = "src/lib.rs"

[[bin]]
name = "skog_server"
path = "src/bin.rs"
